--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               <div className="container mx-auto px-4 py-8 max-w-7xl">
                 <div className="text-center mb-8">
                   <h1 className="text-4xl font-bold text-white mb-2">MMMedia Search</h1>
-                  <p className="text-purple-200">Browse and stream available movies & TV shows</p>
+                  <p className="text-purple-200">Fun must be always:-&rpar;&rpar;</p>
                 </div>
 
                 {showUpload && media.length === 0 && (
